plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.liquibase.gradle' version '2.2.2'
    id 'com.avast.gradle.docker-compose' version "0.17.12"
}

group = 'com.osamuharu'
version = '0.0.1-SNAPSHOT'
description = 'spring-boot-template'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dockerCompose {
    waitForTcpPorts = true
    stopContainers = true

    dev {
        projectName = 'template-dev'
        useComposeFiles = ['docker-compose.dev.yml']
    }
}

configurations {
    configureEach {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

def env = { String key ->
    return  project.findProperty(key)?.toString()
            ?: System.getenv(key)
}

final def dbUrl      = env("db.mysql.url")
final def dbUsername = env("db.mysql.username")
final def dbPassword = env("db.mysql.password")

bootRun {
    environment "DB_MYSQL_URL", dbUrl
    environment "DB_MYSQL_USERNAME", dbUsername
    environment "DB_MYSQL_PASSWORD", dbPassword
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //Database
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-liquibase:4.1.0-M4'
    implementation 'org.liquibase:liquibase-core:5.0.2'
    runtimeOnly 'com.mysql:mysql-connector-j:8.3.0'

    //Liquibase
    liquibaseRuntime 'org.liquibase:liquibase-core:5.0.2'
    liquibaseRuntime 'com.mysql:mysql-connector-j:8.3.0'
    liquibaseRuntime 'info.picocli:picocli:4.7.7'

    // Log4j2
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'com.lmax:disruptor:4.0.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'

    // Utilities
    implementation 'org.projectlombok:lombok:1.18.42'
}

liquibase {
    activities {
        register("main") {
            changelogFile 'src/main/resources/db/changelog/db.changelog-master.yaml'
            url dbUrl
            username dbUsername
            password dbPassword
            driver 'com.mysql.cj.jdbc.Driver'
            logLevel 'info'
        }
    }

    runList = 'main'
}

tasks.named('test') {
    useJUnitPlatform()

    // Environment variables for tests
    environment "DB_MYSQL_URL", dbUrl
    environment "DB_MYSQL_USERNAME", dbUsername
    environment "DB_MYSQL_PASSWORD", dbPassword
}

tasks.withType(Test).configureEach {
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}

tasks.register('runDev') {
    group = 'Development'

    dependsOn 'devComposeUp'
    dependsOn 'bootRun'

    tasks.named('bootRun').get().mustRunAfter('devComposeUp')
}
